# rvlm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.IN  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: README.md  docs.yml  publish.yml  style.yml  test.yml
examples/: brats_example.py  daytona_repl_example.py  docker_repl_example.py  gemma4_example.py  latex_report.py  lm_in_prime_repl.py  lm_in_repl.py  medgemma_recursive_example.py  medical_xray_example.py  mimic_example.py  modal_repl_example.py  prime_repl_example.py  quickstart.py  rvlm_example.py
paper/temp/: main.bbl  main.tex
rvlm/: __init__.py  cache.py  image_utils.py  prompts.py  router.py  rvlm.py  types.py
rvlm/clients/: __init__.py  anthropic.py  azure_openai.py  base_lm.py  gemini.py  hf_local.py  litellm.py  openai.py  portkey.py
rvlm/core/: comms_utils.py  lm_handler.py  rlm.py  types.py
rvlm/environments/: __init__.py  base_env.py  constants.py  daytona_repl.py  docker_repl.py  local_repl.py  modal_repl.py  prime_repl.py
rvlm/evaluation/: __init__.py  metrics.py
rvlm/logger/: __init__.py  rvlm_logger.py  verbose.py
rvlm/utils/: parsing.py  prompts.py  rvlm_utils.py
tests/: test_imports.py
visualizer/: README.md  package-lock.json  package.json
visualizer/src/app/: layout.tsx
visualizer/src/components/: AsciiGlobe.tsx  CodeBlock.tsx  Dashboard.tsx  ExecutionPanel.tsx  IterationTimeline.tsx  LogViewer.tsx
visualizer/src/lib/: types.ts
